关于JVM学习部分提交:JVM部分参数与GC回收以及日志学习